@@ -84,7 +84,8 @@ set JAVA_OPTS_SCRIPT=-XX:+HeapDumpOnOutOfMemoryError ^
   -Dpolyglot.engine.WarnInterpreterOnly=false ^
   -Djava.awt.headless=true ^
   -Dfile.encoding=UTF8 ^
-  -Djava.util.logging.config.file=config/arcadedb-log.properties
+  -Djava.util.logging.config.file=config/arcadedb-log.properties ^
+  --enable-native-access=ALL-UNNAMED
 
 rem ARCADEDB memory options, default uses the available RAM. To set it to a specific value, like 2GB of heap, use "-Xms2G -Xmx2G"
 set ARCADEDB_OPTS_MEMORY=
